--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -403,8 +403,7 @@ Reveal.on( 'fragmenthidden', event => {
     </font>
   </section>
 
-  <section class="center">
-    <h2>External IP (language integration)</h2>
+
 <!-- - What PL people want : they want to integration accelerators built w/ their DSLs and evaluate it in the SoC context. -->
 <!-- - We can provide an example on how to do this. -->
 <!-- - Then we can explain about all the short commings of this approach. -->
@@ -415,6 +414,326 @@ Reveal.on( 'fragmenthidden', event => {
 <!-- - Then, we can explain about the two possible approaches. -->
 <!-- - short-term approach : Graal VM + have a way of interchanging SoC level parameters (Diplomacy+++) -->
 <!-- - long-term superior approach : unified frontend (we should also mention that the frontend should be extensible such that it doesn't limit further improvements in DSLs) -->
+  <section class="center">
+    <h2>Demo : Integrating External IP!</h2>
+    <ul>
+      <li class="fragment">How to integrate your own IP (generated from your own HDL) to perform full system SoC level evaluation?</li>
+      <li class="fragment">What are the challenges during the integration process?</li>
+      <li class="fragment">Future work on how we can fix the above problems as a community!</li>
+    </ul>
+  </section>
+
+  <section class="center">
+    <h3>Step 1 : Generate RTL from your HDL (e.g. Calyx)</h3>
+    <pre data-id="code-animation"><code class="verilog" data-trim data-line-numbers="1">
+    component CalyxSumBlackBox(in: 4) -> (out: 4) {
+      cells { ... }
+      wires { ... }
+      control { ... }
+    }
+    </code></pre>
+    <ul>
+      <li class="fragment">Given a input, add it three times to itself and output it.</li>
+    </ul>
+  </section>
+
+  <section class="center">
+    <h3>Step 1 : Generate RTL from your HDL (e.g. Calyx)</h3>
+    <pre data-id="code-animation"><code class="verilog" data-trim data-line-numbers>
+    module CalyxSumBlackBox(
+      input logic clk,
+      input logic reset,
+
+      input logic [3:0] in,
+      input logic go,
+
+      output logic [3:0] out,
+      output logic done
+    );
+      ...
+    endmodule
+    </code></pre>
+  </section>
+
+  <section data-auto-animate>
+    <h3>Step 2 : Create a BlackBox Module in Chipyard</h3>
+    <pre data-id="code-animation"><code class="scala" data-trim data-line-numbers="1|2-9|12|13-14">
+    class CalyxSumIO(nBits: Int) extends Bundle {
+      val clk   = Input(Clock())
+      val reset = Input(Bool())
+
+      val in    = Input(UInt(nBits.W))
+      val go    = Input(Bool())
+
+      val out   = Output(UInt(nBits.W))
+      val done  = Output(Bool())
+    }
+
+    class CalyxSumBlackBox(nBits: Int) extends BlackBox with HasBlackBoxResource {
+      val io = IO(new CalyxSumIO(nBits))
+      addResource("/vsrc/aggregator.sv")
+    }
+    </code></pre>
+  </section>
+
+  <section data-auto-animate>
+    <h3>Step 3 : Generate a MMIO wrapper in Chipyard</h3>
+    <pre data-id="code-animation"><code class="scala" data-trim data-line-numbers="1|14|18|19-51|54-59">
+    class CalyxSumMMIOWrapper(
+      params: CalyxSumParams, beatBytes: Int
+    )(
+      implicit p: Parameters
+    ) extends ClockSinkDomain(ClockSinkParameters())(p) {
+      val device = new SimpleDevice("calyx-sum", Seq("ucbbar,calyx-sum")) 
+      val node = TLRegisterNode(Seq(AddressSet(params.address, 4096-1)), device, "reg/control", beatBytes=beatBytes)
+
+      val nBits = params.nBits
+      val nSum  = params.nSum
+
+      override lazy val module = new MMIOWrapperImpl
+
+      class MMIOWrapperImpl extends Impl with HasCalyxSumTopIO {
+        val io = IO(new CalyxSumTopIO)
+
+        withClockAndReset(clock, reset) {
+          val bb    = Module(new CalyxSumBlackBox(nBits))
+          val in_q  = Module(new Queue(UInt(nBits.W), params.qDepth))
+          val out_q = Module(new Queue(UInt(nBits.W), params.qDepth))
+
+          val go = RegInit(false.B)
+          val cnt = RegInit(0.U(8.W))
+
+          switch (go) {
+            is (false.B) {
+              when (in_q.io.count > 0.U && out_q.io.enq.ready) {
+                go := true.B
+                cnt := 0.U
+              }
+            }
+
+            is (true.B) {
+              when (bb.io.done) {
+                go := false.B
+              }
+            }
+          }
+
+          bb.io.clk   := clock
+          bb.io.reset := reset.asBool
+          bb.io.go    := go
+          bb.io.in    := in_q.io.deq.bits
+          in_q.io.deq.ready := bb.io.done
+
+          out_q.io.enq.bits  := bb.io.out
+          out_q.io.enq.valid := bb.io.done
+          io.done := bb.io.done
+
+          when (bb.io.done) {
+            assert(out_q.io.enq.ready)
+          }
+
+          node.regmap(
+            0x00 -> Seq(RegField.r(1,     in_q.io.enq.ready)),
+            0x04 -> Seq(RegField.w(nBits, in_q.io.enq)),
+            0x08 -> Seq(RegField.r(1,     out_q.io.deq.valid)),
+            0x0C -> Seq(RegField.r(nBits, out_q.io.deq))
+          )
+        }
+      }
+    }
+    </code></pre>
+  </section>
+
+  <section data-auto-animate>
+    <h3>Step 4 : Add stubs to attach the MMIO wrapper to a bus</h3>
+    <pre data-id="code-animation"><code class="scala" data-trim data-line-numbers="1,7|2|9|10|12,13,28|14|15-18">
+    case class CalyxSumParams(
+      address: BigInt = 0x5000,
+      qDepth: Int = 4,
+      nBits: Int = 4,
+      nSum: Int = 3)
+
+    case object CalyxSumKey extends Field[Option[CalyxSumParams]](None)
+
+    trait CanHaveMMIOCalyxSum { this: BaseSubsystem =>
+      private val pbus = locateTLBusWrapper(PBUS)
+
+      val calyx_sum_done = p(CalyxSumKey) match {
+        case Some(params) => {
+          val cs = LazyModule(new CalyxSumMMIOWrapper(params, pbus.beatBytes)(p))
+          cs.clockNode := pbus.fixedClockNode
+          pbus.coupleTo("calyx_sum_mmio_wrapper") {
+            cs.node := TLFragmenter(pbus.beatBytes, pbus.blockBytes) := _
+          }
+
+          // Add port to DigitalTop (just for fun)
+          val calyx_sum_done = InModuleBody {
+            val done = IO(Output(Bool())).suggestName("calyx_sum_done")
+            done := cs.module.io.done
+            done
+          }
+          Some(calyx_sum_done)
+        }
+        case None => None
+      }
+    }
+    </code></pre>
+  </section>
+
+  <section data-auto-animate>
+    <h3>Step 5 : Mix the previous stub into your SoC</h3>
+    <pre data-id="code-animation"><code class="scala" data-trim data-line-numbers="2,4-5">
+    // DOC include start: DigitalTop
+    class DigitalTop(implicit p: Parameters) extends ChipyardSystem
+      ...
+      // Enables optionally adding a Calyx generated module as a MMIO device
+      with chipyard.example.CanHaveMMIOCalyxSum
+    {
+      override lazy val module = new DigitalTopModule(this)
+    }
+    </code></pre>
+  </section>
+
+  <section class="center">
+    <h3>What did we just do?</h3>
+    <img class="fragment" height=500px; src="./figs/latte24/demo-create-port.svg" />
+  </section>
+
+  <section data-auto-animate>
+    <h3>Step 6 : Configure your SoC to use the MMIO module</h3>
+    <pre data-id="code-animation"><code class="scala" data-trim data-line-numbers="1-3|5-6">
+    class WithCalyxSum extends Config((site, here, up) => {
+      case CalyxSumKey => Some(CalyxSumParams())
+    })
+
+    class CalyxSumRocketConfig extends Config(
+      new chipyard.example.WithCalyxSum ++
+      new freechips.rocketchip.subsystem.WithNBigCores(1) ++
+      new chipyard.config.AbstractConfig)
+    </code></pre>
+    <p>At this point, the SoC level configuration is finished</p>
+  </section>
+
+  <section class="center">
+    <h3>Overall SoC</h3>
+    <img class="fragment" height=500px; src="./figs/latte24/demo-overall-soc.svg" />
+  </section>
+
+  <section data-auto-animate>
+    <h3>Step 7 : Write software to talk to the MMIO device</h3>
+    <pre data-id="code-animation"><code class="cpp" data-trim data-line-numbers="4-8|11,17,24,30|12,20,25,32">
+    ...
+
+
+    #define CALYX_SUM_BASE 0x5000
+    #define CALYX_SUM_ENQ_RDY  (CALYX_SUM_BASE + 0)
+    #define CALYX_SUM_ENQ_BITS (CALYX_SUM_BASE + 4)
+    #define CALYX_SUM_DEQ_VAL  (CALYX_SUM_BASE + 8)
+    #define CALYX_SUM_DEQ_BITS (CALYX_SUM_BASE + 12)
+
+
+    static inline int calyx_sum_enq_ready() {
+      int rdy = reg_read32(CALYX_SUM_ENQ_RDY);
+      printf("calyx_sum_enq_ready: %d\n", rdy);
+      return (rdy != 0);
+    }
+
+    static inline void calyx_sum_send_input(int val) {
+      while (!calyx_sum_enq_ready());
+      printf("sending input: %d\n", val);
+      reg_write32(CALYX_SUM_ENQ_BITS, val & 0xf);
+      printf("sending input done\n");
+    }
+
+    static inline int calyx_sum_deq_valid() {
+      int val = reg_read32(CALYX_SUM_DEQ_VAL); 
+      printf("calyx_sum_deq_val: %d\n", val);
+      return (val != 0);
+    }
+
+    static inline int calyx_sum_get_output() {
+      while (!calyx_sum_deq_valid());
+      return reg_read32(CALYX_SUM_DEQ_BITS);
+    }
+    </code></pre>
+  </section>
+
+  <section data-auto-animate>
+    <h3>Step 7 : Write software to talk to the MMIO device</h3>
+    <pre data-id="code-animation"><code class="cpp" data-trim data-line-numbers="10|12|15-18,20">
+    ...
+
+    #define TEST_SIZE 3
+
+    int main() {
+
+      int test_inputs[TEST_SIZE] = {1, 2, 3};
+
+      for (int i = 0; i &lt; TEST_SIZE; i++) {
+        calyx_sum_send_input(test_inputs[i]);
+
+        int out = calyx_sum_get_output();
+        int expect = test_inputs[i] * 3;
+
+        if (out != expect) {
+          printf("expect %d got %d\n", expect, out);
+          return 1;
+        }
+      }
+      printf("[*] Test success!\n");
+      return 0;
+    }
+    </code></pre>
+  </section>
+
+  <section data-auto-animate>
+    <h3>Step 8 : Run SoC level integration tests</h3>
+    <pre data-id="code-animation"><code class="bash" data-trim data-line-numbers="5">
+    cd chipyard/tests
+    make
+    cd -
+    cd chipyard/sims/verilator
+    make -j$(nproc) run-binary CONFIG=CalyxSumRocketConfig BINARY=../../tests/calyx-sum.riscv
+    </code></pre>
+  </section>
+
+  <section class="center">
+    <h3>Step 8 : Run SoC level integration tests</h3>
+    <img height=500px; src="./figs/latte24/calyx-uartlog.png" />
+  </section>
+
+  <section class="center">
+    <h3>Challenges during the integration process</h3>
+    <ul>
+      <li class="fragment">Difficult to shared parameters btw the HDL and SoC framework.</li>
+      <ul>
+        <li class="fragment">HDL to SoC : port width of the module.</li>
+        <li class="fragment">SoC to HDL : bus width, bus beats, addresses.</li>
+      </ul>
+      <li class="fragment">Diffult to DRY out the port definitions between the HDL and SoC framework.</li>
+      <li class="fragment">Need a unified way of debugging the integration logic and the internal module.</li>
+      <ul>
+        <li class="fragment">HDL frameworks have their own way of debugging things (hard to look at waveforms of generated RTL).</li>
+        <li class="fragment">We want to look at waveforms for the SoC level things.</li>
+      </ul>
+      <li class="fragment">Expected simulation semantics might differ between frameworks.</li>
+    </ul>
+  </section>
+
+  <section class="center">
+    <h3>How can we fix the above issues<br>(as a community)?</h3>
+    <ul>
+      <li class="fragment">Short term</li>
+      <ul>
+        <li class="fragment">Graal VM to build and interface frameworks built in different languages.</li>
+        <li class="fragment">A library in Chipyard that exposes APIs that enables external frameworks to negotiate parameters with the SoC.</li>
+      </ul>
+      <li class="fragment">Long term</li>
+      <ul>
+        <li class="fragment">Unified language frontend that is highly extensible.</li>
+        <li class="fragment">No more hacky DPI interfaces, or clunky libraries required.</li>
+      </ul>
+    </ul>
   </section>
 
   <section class="center">
